--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -2,4 +2,11 @@
 
 {% block title %}Home{% endblock %}
 
+{% block content %}
 <h1>home page</h1>
+<h1>home page</h1>
+<h1>home page</h1>
+<h1>home page</h1>
+<h1>home page</h1>
+<h1>home page</h1>
+{% endblock %}
