--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,7 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="../../../static/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="{% static 'main/favicon.ico' %}">
     <title>Serambi Mungil | {% block title %}{% endblock %}</title>
 
     <!-- Font Awesome icons -->
@@ -20,9 +22,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- CSS Stylesheet -->
-    <link rel="stylesheet" href="../../../static/styles.css">
+    <link rel="stylesheet" href="{% static 'main/styles.css' %}">
 </head>
-
+<style>
+  .jumbotron {
+    background-image: url('../../static/main/1920x900.png');
+  }
+</style>
 <body>
 
     <!-- Navigation Bar -->
@@ -54,7 +60,7 @@
     {% block home_jumbotron %}
         <div class="jumbotron text-center">
             <div class="intro">
-                <img src="../../../static/serambimungil-avatar.png" alt=""><br>
+                <img src="{% static 'main/serambimungil-avatar.png' %}" alt=""><br>
                 <h1>
                     line 1<br>
                     line 2
